appgwingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  selector:
    color: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
    apiVersion: v1
    kind: Service
    metadata:
      name: red-service
    spec:
      selector:
        color: red
      ports:
        - protocol: TCP
          port: 80
          targetPort: 80
