appgwingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-app
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: blue.ozgurozturk.net
      http:
        paths:
            - backend:
                serviceName: blue-service
                servicePort: 80
    - host: red.ozgurozturk.net
      http:
        paths:
            - backend:
                serviceName: red-service
                servicePort: 80
    - host: grafana.ozgurozturk.net
      http:
        paths:
            - backend:
                serviceName: grafana-1594219670
                servicePort: 80
